--- a/18.webpack.md
+++ b/18.webpack.md
@@ -35,4 +35,12 @@
 - laze loading: code splitting 기능으로 모듈을 원하는 타이밍에 로딩한다.
 - 트리 쉐이킹: 사용하지 않는 라이브러리를 떨궈낸다
 
+### 주요 용어
+- Entry : 번들링을 시작하기 위한 최초 진입점의 자바스크립트 파일 경로를 설정하는 옵션
+- Output : Entry에서 지정한 진입점을 바탕으로 결과물을 반환하는 설정을 하는 옵션
+- Loader : 자바스크립트 파일 외에 다른 포맷(HTML, CSS, Image, Font 등..)의 파일을 처리하여 앱에서 사용할 수 있도록 모듈로 변환 할 수 있도록 도와주는 옵션
+- Plugins : Webpack의 기본적인 동작에 추가적인 기능을 제공하는 옵션입니다.
+- Resolve : Webpack에 기본값을 제공하지만 상세하게 해석 방식을 변경에 대한 설정을 하는 옵션입니다.
+- Mode : Webpack에 내장된 최적화 기능을 사용할 수 있는 옵션입니다.
+
 출처 : https://kyounghwan01.github.io/blog/etc/webpack/webpack/#%E1%84%8B%E1%85%B0%E1%86%B8%E1%84%91%E1%85%A2%E1%86%A8%E1%84%8B%E1%85%B3%E1%86%AF-%E1%84%90%E1%85%A9%E1%86%BC%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%87%E1%85%A5%E1%86%AB%E1%84%83%E1%85%B3%E1%86%AF%E1%84%85%E1%85%B5%E1%86%BC-%E1%84%8E%E1%85%AC%E1%84%8C%E1%85%A5%E1%86%A8%E1%84%92%E1%85%AA-lazy-loading
