--- a/25.라이브러리를고르는기준.md
+++ b/25.라이브러리를고르는기준.md
@@ -4,3 +4,5 @@
 2. 인기(https://npmtrends.com) 인기도 파악
 3. 기능/성능(https://github.com) 깃헙 들어가보면 최근에 언제 업데인트가 되었는지 업데이트가 된지 오래될수록 선호하지않음
 4. 사용하려는 라이브러리이름 alternative를 검색하다보면 대안들이 나온다 그 후보들을 보면서 비교하는것도 좋다고 생각함
+
+라이브러리를 고른다는건 결국 정답은 있는것은 아니라 상황에 따라 맞게 사용하는게 좋을것같다.
