--- a/26.cors.md
+++ b/26.cors.md
@@ -65,7 +65,19 @@ gotWeather({
 두 조건을 모두 충족하지 않는 요청은 '안전하지 않은(unsafe) 요청’으로 취급됩니다. PUT 메서드를 사용하거나 헤더에 API-Key가 명시된 요청의 경우같이 말이죠.
 2. 그 외의 요청(안전한 요청이 아닌 요청)
 
-
+## 안전하지 않은 요청
+모든 HTTP 메서드를 사용할 수 GET/POST있습니다 .PATCH DELETE  
+얼마 전까지만 해도 아무도 웹페이지가 그러한 요청을 할 수 있다고 상상조차 하지 못했습니다. 따라서 비표준 방법을 "그건 브라우저가 아닙니다"라는 신호로 취급하는 웹 서비스가 여전히 존재할 수 있습니다. 액세스 권한을 확인할 때 고려할 수 있습니다.  
+따라서 오해를 피하기 위해 이전에는 수행할 수 없었던 "안전하지 않은" 요청을 브라우저에서 즉시 수행하지 않습니다. 먼저, 권한을 요청하기 위해 소위 "프리플라이트"라고 하는 예비 요청을 보냅니다.  
+프리플라이트 요청은 메서드를 사용하고 OPTIONS본문은 사용하지 않으며 3개의 헤더를 사용합니다.  
+- Access-Control-Request-Method헤더에는 안전하지 않은 요청의 메서드가 있습니다.
+- Access-Control-Request-Headersheader는 안전하지 않은 HTTP 헤더의 쉼표로 구분된 목록을 제공합니다.
+- Origin헤더는 요청이 어디에서 왔는지 알려줍니다. (예 https://javascript.info:)
+서버가 요청을 처리하는 데 동의하면 빈 본문, 상태 200 및 헤더로 응답해야 합니다.
+- Access-Control-Allow-Origin이를 허용하려면 *또는 와 같은 요청 출처 여야 합니다 .https://javascript.info
+- Access-Control-Allow-Methods허용된 메서드가 있어야 합니다.
+- Access-Control-Allow-Headers허용된 헤더 목록이 있어야 합니다.
+- 또한 헤더는 Access-Control-Max-Age권한을 캐시할 시간(초)을 지정할 수 있습니다. 따라서 브라우저는 주어진 권한을 충족하는 후속 요청에 대해 프리플라이트를 보낼 필요가 없습니다.
 
 
 
