--- a/26.cors.md
+++ b/26.cors.md
@@ -79,6 +79,34 @@ gotWeather({
 - Access-Control-Allow-Headers허용된 헤더 목록이 있어야 합니다.
 - 또한 헤더는 Access-Control-Max-Age권한을 캐시할 시간(초)을 지정할 수 있습니다. 따라서 브라우저는 주어진 권한을 충족하는 후속 요청에 대해 프리플라이트를 보낼 필요가 없습니다.
 
+## 응답 헤더
+원본 간 요청의 경우 기본적으로 JavaScript는 소위 "안전한" 응답 헤더에만 액세스할 수 있습니다.
+- Cache-Control
+- Content-Language
+- Content-Length
+- Content-Type
+- Expires
+- Last-Modified
+- Pragma
+
+다른 응답 헤더에 액세스하면 오류가 발생합니다.
+
+다른 응답 헤더에 JavaScript 액세스 권한을 부여하려면 서버에서 헤더를 보내야 합니다 Access-Control-Expose-Headers.  
+여기에는 액세스할 수 있어야 하는 안전하지 않은 헤더 이름의 쉼표로 구분된 목록이 포함되어 있습니다.
+
+## 요약
+브라우저 관점에서 교차 출처 요청에는 "안전한" 요청과 다른 모든 요청의 두 가지 종류가 있습니다.
+
+"안전한" 요청은 다음 조건을 충족해야 합니다.
+- 방법: GET, POST 또는 HEAD.
+- 헤더 – 다음 항목만 설정할 수 있습니다.
+  - Accept
+  - Accept-Language
+  - Content-Language
+  - Content-Type값 application/x-www-form-urlencoded또는 multipart/form-data. text/plain_
+
+본질적인 차이점은 고대부터 태그를 사용하여 안전한 요청을 할 수 있었던 반면 안전하지 않은 요청은 오랫동안 브라우저에서 불가능했다는 것 <form>입니다 <script>  
+따라서 실제적인 차이점은 안전한 요청은 헤더와 함께 즉시 전송되는 Origin반면 다른 요청의 경우 브라우저가 예비 "프리플라이트" 요청을 만들어 허가를 요청한다는 것입니다.  
 
 
 출처 : https://ko.javascript.info/fetch-crossorigin#ref-835
