--- a/26.cors.md
+++ b/26.cors.md
@@ -108,5 +108,18 @@ gotWeather({
 본질적인 차이점은 고대부터 태그를 사용하여 안전한 요청을 할 수 있었던 반면 안전하지 않은 요청은 오랫동안 브라우저에서 불가능했다는 것 <form>입니다 <script>  
 따라서 실제적인 차이점은 안전한 요청은 헤더와 함께 즉시 전송되는 Origin반면 다른 요청의 경우 브라우저가 예비 "프리플라이트" 요청을 만들어 허가를 요청한다는 것입니다.  
 
+### 의문점
+1. Referer에 더 많은 정보가 있을 수 있는데 왜 Origin을 따로 두었을까?
+2. 헤더에 Referer나 Origin이 없을 수도 있을 텐데 이런 경우엔 어떤 일이 발생할까?
+
+간혹 Referer가 없는 경우가 있기 때문에 Origin이 필요합니다. HTTPS 프로토콜을 사용해 HTTP 페이지를 요청하는 경우같이 보안 수준이 높은 방법을 사용해 보안 수준이 낮은 페이지에 접근할 땐 Referer가 없습니다.  
+
+이 외에도 콘텐츠 보안 정책이 적용돼 Referer 정보가 누락되는 경우도 있습니다.  
+
+fetch 메서드에 대해 자세히 알아보면서 아시게 되겠지만, fetch에는 Referer 전송을 막는 옵션이 있습니다. 동일한 사이트 내에서 Referer 수정을 허용하는 옵션도 있죠.  
+
+명세서에 따르면, Referer는 HTTP 헤더에서 선택 사항입니다.  
+
+이렇게 Referer는 신뢰할 수 없는 정보를 담고 있을 확률이 높기 때문에 명세서에 Origin이 추가되었습니다. 크로스 오리진 요청 시 브라우저는 Origin이 제대로 전송되는 것을 보장합니다.  
 
 출처 : https://ko.javascript.info/fetch-crossorigin#ref-835
