--- a/30.module.md
+++ b/30.module.md
@@ -60,3 +60,73 @@ sayHi('John'); // Hello, John!
 모듈은 자신만의 스코프가 있습니다. 따라서 모듈 내부에서 정의한 변수나 함수는 다른 스크립트에서 접근할 수 없습니다.
  
 외부에 공개하려는 모듈은 export 해야 하고, 내보내진 모듈을 가져와 사용하려면 import 해줘야 합니다.  
+
+### 단 한 번만 평가됨
+동일한 모듈이 여러 곳에서 사용되더라도 모듈은 최초 호출 시 단 한 번만 실행됩니다. 실행 후 결과는 이 모듈을 가져가려는 모든 모듈에 내보내 집니다.
+
+이런 작동 방식은 중요한 결과를 초래합니다. 예시를 통해 이에 대해 알아봅시다.
+
+alert 함수가 있는 모듈(alert.js)을 여러 모듈에서 가져오기로 해봅시다. 얼럿 창은 단 한 번만 나타납니다.
+```
+// 📁 alert.js
+alert("모듈이 평가되었습니다!");
+```
+```
+// 동일한 모듈을 여러 모듈에서 가져오기
+// 📁 1.js
+import `./alert.js`; // 얼럿창에 '모듈이 평가되었습니다!'가 출력됩니다.
+// 📁 2.js
+import `./alert.js`; // 아무 일도 발생하지 않습니다.
+```
+실무에선 최상위 레벨 모듈을 대개 초기화나 내부에서 쓰이는 데이터 구조를 만들고 이를 내보내 재사용하고 싶을 때 사용합니다.
+이제 좀 더 어려운 예시를 살펴보겠습니다.
+객체를 내보내는 모듈을 만들어봅시다.
+```
+// 📁 admin.js
+export let admin = {
+  name: "John"
+};
+```
+이 모듈을 가져오는 모듈이 여러 개이더라도 앞서 설명한 것처럼 모듈은 최초 호출 시 단 한 번만 평가됩니다. 이때 admin 객체가 만들어지고 이 모듈을 가져오는 모든 모듈에 admin 객체가 전달됩니다.
+
+각 모듈에 동일한 admin 객체가 전달되는 것이죠.
+```
+// 📁 1.js
+import {admin} from './admin.js';
+admin.name = "Pete";
+
+// 📁 2.js
+import {admin} from './admin.js';
+alert(admin.name); // Pete
+```
+
+자, 다시 한번 말씀드리겠습니다. 모듈은 단 한 번만 실행되고 실행된 모듈은 필요한 곳에 공유되므로 어느 한 모듈에서 admin 객체를 수정하면 다른 모듈에서도 변경사항을 확인할 수 있습니다.
+
+이런 특징을 이용하면 모듈 *설정(configuration)*을 쉽게 할 수 있습니다. 최초로 실행되는 모듈의 객체 프로퍼티를 원하는 대로 설정하면 다른 모듈에서 이 설정을 그대로 사용할 수 있기 때문이죠.
+
+예시를 통해 이에 대해 자세히 알아봅시다. 아래 admin.js 모듈은 어떤 특정한 기능을 제공해주는데, 이 기능을 사용하려면 외부에서 admin 객체와 관련된 인증 정보를 받아와야 한다고 가정해봅시다.
+```
+// 📁 admin.js
+export let admin = { };
+
+export function sayHi() {
+  alert(`${admin.name}님, 안녕하세요!`);
+}
+```
+
+최초로 실행되는 스크립트인 init.js에서 admin.name을 설정해주었습니다. 이렇게 하면 admin.js를 포함한 외부 스크립트에서 admin.name에 저장된 정보를 볼 수 있습니다.
+```
+// 📁 init.js
+import {admin} from './admin.js';
+admin.name = "보라";
+```
+
+또 다른 모듈에서도 admin.name에 저장된 정보를 볼 수 있다는 걸 확인해 봅시다.
+```
+// 📁 other.js
+import {admin, sayHi} from './admin.js';
+alert(admin.name); // 보라
+sayHi(); // 보라님, 안녕하세요!
+```
+
+출처 : https://ko.javascript.info/modules-intro
