--- a/30.module.md
+++ b/30.module.md
@@ -129,4 +129,38 @@ alert(admin.name); // 보라
 sayHi(); // 보라님, 안녕하세요!
 ```
 
+
+### import.meta
+import.meta 객체는 현재 모듈에 대한 정보를 제공해줍니다.  
+
+호스트 환경에 따라 제공하는 정보의 내용은 다른데, 브라우저 환경에선 스크립트의 URL 정보를 얻을 수 있습니다. HTML 안에 있는 모듈이라면, 현재 실행 중인 웹페이지의 URL 정보를 얻을 수 있습니다.
+
+```
+<script type="module">
+  alert(import.meta.url); // script URL (인라인 스크립트가 위치해 있는 html 페이지의 URL)
+</script>
+```
+
+### this는 undefined
+사소한 내용이지만 튜토리얼의 완전성을 위해 이 내용을 언급하고 넘어가야 할 것 같습니다.
+모듈 최상위 레벨의 this는 undefined입니다.
+모듈이 아닌 일반 스크립트의 this는 전역 객체인 것과 대조됩니다.
+
+```
+<script>
+  alert(this); // window
+</script>
+
+<script type="module">
+  alert(this); // undefined
+</script>
+```
+
+### 브라우저 특정 기능
+브라우저 환경에서 type="module"이 붙은 스크립트가 일반 스크립트와 어떤 점이 다른지 알아봅시다.
+자바스크립트 초심자나 브라우저 환경에서 자바스크립트를 사용하지 않고 있다면 이 내용은 넘어가셔도 됩니다.
+
+### 지연 실행
+모듈 스크립트는 항상 지연 실행됩니다. 외부 스크립트, 인라인 스크립트와 관계없이 마치 defer 속성을 붙인 것처럼 실행됩니다(defer속성에 대한 자세한 내용은 defer, async 스크립트에서 확인할 수 있습니다).
+
 출처 : https://ko.javascript.info/modules-intro
