--- a/30.module.md
+++ b/30.module.md
@@ -163,4 +163,20 @@ import.meta 객체는 현재 모듈에 대한 정보를 제공해줍니다.
 ### 지연 실행
 모듈 스크립트는 항상 지연 실행됩니다. 외부 스크립트, 인라인 스크립트와 관계없이 마치 defer 속성을 붙인 것처럼 실행됩니다(defer속성에 대한 자세한 내용은 defer, async 스크립트에서 확인할 수 있습니다).
 
+## 요약
+1. 모듈은 하나의 파일입니다. 브라우저에서 import ,export 지시자를 사용하려면 
+script type="module" 같은 속성이 필요합니다. 모듈은 아래와 같은 특징을 지닙니다.  
+- 지연 실행됩니다.
+- 인라인 모듈 스크립트도 비동기 처리할 수 있습니다.
+- 외부 오리진(도메인이나 프로토콜, 포트가 다른 오리진)에서 스크립트를 불러오려면 CORS 헤더가 있어야 합니다.
+- 중복된 외부 스크립트는 무시됩니다.
+2. 모듈은 자신만의 스코프를 갖습니다. 모듈 간 기능 공유는 import, export로 할 수 있습니다.
+3. 항상 엄격 모드로 실행(use strict)됩니다.
+4. 모듈 내 코드는 단 한 번만 실행됩니다. 모듈을 내보내면 이 모듈을 가져오기 하는 모듈 모두가 내보내진 모듈을 공유합니다.
+
+모듈 내 함수나 객체 등은 export 키워드로 내보낼 수 있습니다. 이렇게 내보내진 기능은 import 키워드를 사용해 가져와 사용할 수 있습니다. 브라우저는 자동으로 스크립트를 불러오고 평가합니다.
+
+실제 애플리케이션을 출시할 땐 성능 개선 등의 이점 때문에 웹팩과 같은 번들러를 사용합니다.
+
+
 출처 : https://ko.javascript.info/modules-intro
