--- a/31.옵셔널체이닝.md
+++ b/31.옵셔널체이닝.md
@@ -59,5 +59,74 @@ alert( user?.address.street ); // undefined
 
 user가 null이나 undefined가 아니고 실제 값이 존재하는 경우엔 반드시 user.address 프로퍼티는 있어야 합니다. 그렇지 않으면 user?.address.street의 두 번째 점 연산자에서 에러가 발생합니다.
 
+### 주의사항
+1. 옵셔널 체이닝을 남용하지 마세요.  
+- ?.는 존재하지 않아도 괜찮은 대상에만 사용해야 합니다.  
+사용자 주소를 다루는 위 예시에서 논리상 user는 반드시 있어야 하는데 address는 필수값이 아닙니다. 그러니 user.address?.street를 사용하는 것이 바람직합니다.  
+실수로 인해 user에 값을 할당하지 않았다면 바로 알아낼 수 있도록 해야 합니다. 그렇지 않으면 에러를 조기에 발견하지 못하고 디버깅이 어려워집니다.  
+
+2. ?.앞의 변수는 꼭 선언되어 있어야 합니다.
+- 변수 user가 선언되어있지 않으면 user?.anything 평가시 에러가 발생합니다.
+```
+// ReferenceError: user is not defined
+user?.address;
+```
+user?.anything을 사용하려면 let이나 const, var를 사용해 user를 정의해야 하죠. 이렇게 옵셔널 체이닝은 선언이 완료된 변수를 대상으로만 동작합니다.
+
+### 단락 평가
+?.는 왼쪽 평가대상에 값이 없으면 즉시 평가를 멈춥니다. 참고로 이런 평가 방법을 단락 평가(short-circuit)라고 부릅니다.
+
+그렇기 때문에 함수 호출을 비롯한 ?. 오른쪽에 있는 부가 동작은 ?.의 평가가 멈췄을 때 더는 일어나지 않습니다.
+
+```
+let user = null;
+let x = 0;
+
+user?.sayHi(x++); // 아무 일도 일어나지 않습니다.
+
+alert(x); // 0, x는 증가하지 않습니다.
+```
+
+### ?.()와 ?.[]
+?.은 연산자가 아닙니다. ?.은 함수나 대괄호와 함께 동작하는 특별한 문법 구조체(syntax construct)입니다.
+
+함수 관련 예시와 함께 존재 여부가 확실치 않은 함수를 호출할 때 ?.()를 어떻게 쓸 수 있는지 알아봅시다.
+
+한 객체엔 메서드 admin이 있지만 다른 객체엔 없는 상황입니다.
+
+```
+let user1 = {
+  admin() {
+    alert("관리자 계정입니다.");
+  }
+}
+
+let user2 = {};
+
+user1.admin?.(); // 관리자 계정입니다.
+user2.admin?.();
+```
+
+두 상황 모두에서 user 객체는 존재하기 때문에 admin 프로퍼티는 .만 사용해 접근했습니다.
+
+그리고 난 후 ?.()를 사용해 admin의 존재 여부를 확인했습니다. user1엔 admin이 정의되어 있기 때문에 메서드가 제대로 호출되었습니다. 반면 user2엔 admin이 정의되어 있지 않았음에도 불구하고 메서드를 호출하면 에러 없이 그냥 평가가 멈추는 것을 확인할 수 있습니다.
+
+.대신 대괄호 []를 사용해 객체 프로퍼티에 접근하는 경우엔 ?.[]를 사용할 수도 있습니다. 위 예시와 마찬가지로 ?.[]를 사용하면 객체 존재 여부가 확실치 않은 경우에도 안전하게 프로퍼티를 읽을 수 있습니다.
+
+```
+let user1 = {
+  firstName: "Violet"
+};
+
+let user2 = null; // user2는 권한이 없는 사용자라고 가정해봅시다.
+
+let key = "firstName";
+
+alert( user1?.[key] ); // Violet
+alert( user2?.[key] ); // undefined
+
+alert( user1?.[key]?.something?.not?.existing); // undefined
+```
+?.은 delete와 조합해 사용할 수도 있습니다.
 
 출처 : https://ko.javascript.info/optional-chaining
