기타 리소스 추가

--- a/32.onload-onerror.md
+++ b/32.onload-onerror.md
@@ -51,4 +51,26 @@ script.onerror = function() {
 ```
 여기서는 HTTP 오류 세부정보를 얻을 수 없습니다. 오류 404인지, 500인지, 아니면 다른 오류인지 알 수 없습니다. 단지 로딩이 실패했다는 것뿐입니다.
 
+### 기타 리소스
+load이벤트 error는 기본적으로 외부 src
+
+```
+let img = document.createElement('img');
+img.src = "https://js.cx/clipart/train.gif"; // (*)
+
+img.onload = function() {
+  alert(`Image loaded, size ${img.width}x${img.height}`);
+};
+
+img.onerror = function() {
+  alert("Error occurred while loading image");
+};
+```
+
+몇 가지 참고 사항이 있습니다.
+- 대부분의 리소스는 문서에 추가되면 로드되기 시작합니다. 그러나 <img>예외입니다. src 를 받으면 로딩이 시작됩니다 (*).
+- 의 경우 성공적인 로드와 오류 발생 시 iframe 로드가 완료되면 이벤트가 트리거됩니다 iframe.onload
+
+
+
 출처 : https://ko.javascript.info/onload-onerror
