--- a/33.NODEJS에 관하여.md
+++ b/33.NODEJS에 관하여.md
@@ -18,4 +18,43 @@ Node.js는 확장성 있는 네트워크 애플리케이션(특히 서버 사이
 - 기본적으로 프로세스당 최소 1개의 스레드를 가지고 있다.
 - 한 프로세스는 다른 프로세스의 변수나 자료구조에 접근 할 수 없다.
 
-  출처 : https://velog.io/@daeseongkim/Node.js-Node.js%EB%8A%94-%EC%8B%B1%EA%B8%80-%EC%8A%A4%EB%A0%88%EB%93%9C
+### 정적 세그먼트
+1. Code -> 작성한 코드가 들어가는 부분
+2. Data -> 전역변수(global), 정적변수(static), 배열(array), 구조체(structure)등이 저장 프로그램의 시작과 함께 할당되며, 프로그램이 종료되면 소멸
+
+### 동적 세그먼트
+1. Heap -> 개발자가 관리하는 동적인 공간, 변수, 함수 저장, 호출 등의 작업이 발생하는 공간
+2. Stack -> 함수 호출시 생성되고, 함수 종료시 반환되는 LIFO구조 정책을 사용하는 임시 메모리 공간
+
+## 스레드
+스레드(thread)는 어떠한 프로그램 내에서, 특히 프로세스 내에서 실행되는 흐름의 단위를 말한다.  
+일반적으로 한 프로그램은 하나의 스레드를 가지고 있지만, 프로그램 환경에 따라 둘 이상의 스레드를 동시에 실행할 수 있다.  
+이러한 실행 방식을 멀티스레드(multithread)라고 한다.
+
+### 싱글 스레드
+- 하나의 프로세스에서 하나의 스레드 실행
+- 하나의 레지스터와 스택으로 표현
+- 레지스터 : CPU 내부의 저장장치
+- 스택 : 레지스터 집합에 존재하는 저장장치 (LIFO)
+
+### 멀티 스레드
+- 프로세스를 다수의 실행 단위로 나누어 실행
+- 프로세스 내에서 자원을 공유하여 자원 생성과 관리의 중복을 최소화
+- 각각의 스레드가 고유의 레지스터와 스택을 사용
+
+### 싱글 스레드와 멀티 스레드의 장단점
+1. 싱글 스레드
+    - 장점
+      - 자원 접근에 대한 동기화를 신경쓰지 않아도 된다
+      - 작업전환(context switch) 작업을 요구하지 않는다.
+    - 단점
+      - 여러개의 CPU를 활용하지 못한다.
+2. 멀티 스레드
+   - 장점
+     - 프로세스의 자원과 상태를 공유하기 때문에 효율적으로 운영이 가능하다.
+     - 서버가 많은 요청을 효율적으로 수행할 수 있는 환경 제공
+   - 단점
+     - 스레드 스케쥴링을 신경써야 한다.
+     - context switch에 시간이 많이 걸린다면, 오히려 더 느릴 수 있다.
+
+ 출처 : https://velog.io/@daeseongkim/Node.js-Node.js%EB%8A%94-%EC%8B%B1%EA%B8%80-%EC%8A%A4%EB%A0%88%EB%93%9C
