--- a/33.NODEJS에 관하여.md
+++ b/33.NODEJS에 관하여.md
@@ -57,4 +57,14 @@ Node.js는 확장성 있는 네트워크 애플리케이션(특히 서버 사이
      - 스레드 스케쥴링을 신경써야 한다.
      - context switch에 시간이 많이 걸린다면, 오히려 더 느릴 수 있다.
 
+
+### 그래서? Node.js의 구조는?
+결론부터 말하면, node.js는 싱글 스레드를 가지고 있다. 그러나 자바스크립트를 실행하는 스레드는 단 하나이므로 Node를 싱글스레드라고 한다. 그리고 그 싱글스레드가 바로 이벤트 루프이다.
+
+자바스크립트 엔진은 Memory Heap과 Call stack으로 이루어져 있는데, 자바스크립트 엔진 자체는 콜스택에 쌓인 실행 컨텍스트에 따라 위에서부터 차례로 실행이 일어나는 곳이기 때문에 비동기 처리를 할 수 없다. 따라서 비동기 처리가 필요하게 될 경우, Node api를 통해 libuv 라이브러리에서 제공하는 비동기처리를 하게 된다.
+
+Node.js는 싱글스레드 논블로킹 모델로 구성되어 있다. 하나의 스레드로 동작하지만, 비동기 I/O 작업을 통해 요청들을 서로 블로킹하지 않는 것이다. 즉, 동시에 많은 요청들을 비동기로 수행함으로써 싱글스레드일지라도 논블로킹이 가능하도록 구성할 수 있는 것이다.
+
+![003](images/003.PNG)
+
  출처 : https://velog.io/@daeseongkim/Node.js-Node.js%EB%8A%94-%EC%8B%B1%EA%B8%80-%EC%8A%A4%EB%A0%88%EB%93%9C
