--- a/34.이벤트루프.md
+++ b/34.이벤트루프.md
@@ -36,3 +36,99 @@
 
 1. 엔진이 특정 태스크를 처리하는 동안엔 렌더링이 절대 일어나지 않습니다. 태스크를 처리하는 데 걸리는 시간이 길지 않으면 이는 전혀 문제가 되지 않습니다. 처리가 끝나는 대로 DOM 변경을 화면에 반영하면 되기 때문입니다.
 2. 태스크 처리에 긴 시간이 걸리면, 브라우저는 태스크를 처리하는 동안에 발생한 사용자 이벤트 등의 새로운 태스크들을 처리하지 못합니다. 인터넷 서핑을 하다 보면 '응답 없는 페이지(Page Unresponsive)'라는 얼럿 창을 만나게 되는 경우가 종종 있습니다. 이 얼럿 창은 아주 복잡한 계산이 필요하거나 프로그래밍 에러 때문에 무한 루프에 빠지게 될 때 나타나는데, 브라우저는 얼럿 창을 통해 사용자에게 페이지 전체와 함께 해당 태스크를 취소시킬지 말지를 선택하도록 유도합니다.
+
+### 유스 케이스 1 : CPU 소모가 많은 태스크 쪼개기
+CPU 소모가 아주 많은 태스크 하나가 있다고 가정해 봅시다.  
+
+형광펜을 칠한 것처럼 페이지 일부를 강조해 주는 것이 바로 이런 태스크에 속합니다. 튜토리얼을 잘 따라오셨다면 예시 곳곳에서 이런 기능이 사용되고 있다는 것을 눈치채셨을 겁니다. 이렇게 코드 일부를 강조하기 위해선 어떤 부분을 강조해야 할지에 대한 사전 분석이 필요합니다. 여기에 더하여 색을 변경한 요소를 새롭게 만들고, 새로 만든 요소들을 문서에 추가해야 하는 일련의 작업이 필요하죠. 강조해야 할 코드 양이 많다면 당연히 아주 긴 시간이 소모될 겁니다.
+
+코드 강조라는 태스크를 수행하느라 엔진이 바쁠 때엔 사용자 이벤트 처리나 DOM 관련 작업이 완전히 멈추게 됩니다. 그러다 보면 브라우저에 '지연’이 생기거나 심하면 ‘멈춤’ 현상까지 발생하기도 하죠. 절대 있어서는 안 될 일입니다.
+
+이런 불가피한 상황들은 태스크를 여러 조각으로 쪼개 예방할 수 있습니다. 앞부분 100줄만 먼저 강조하고, 지연시간이 0인 setTimeout을 사용해 새롭게 스케줄링을 한 다음, 그 다음 100줄을 강조하는 식으로 코드를 변경하면 되죠.
+
+실제 코드를 통해 어떻게 하면 태스크를 쪼갤 수 있는지 알아봅시다. 직접 강조기능을 구현하는 대신 1부터 1000000000까지의 숫자를 세주는 함수를 사용해 간결한 코드로 시연해 보겠습니다
+
+먼저 리팩토링 전의 코드를 살펴봅시다. 아래 예시를 실행하면 엔진이 몇 초간 ‘멈춥니다’. 서버 사이드 환경에서 예시를 실행하면 멈춤 현상이 눈에 잘 띄는데, 지금은 브라우저상에서 예시를 실행하고 있기 때문에 실행 후 페이지 내에 있는 아무 버튼이나 클릭해 지연이 발생하는 것을 직접 확인해 보도록 합시다(마우스 오른쪽 버튼을 누르면 쉽게 이벤트 지연을 확인할 수 있습니다 – 옮긴이). 숫자 카운팅이 끝나고 얼럿 창이 뜨기 전까진 그 어떤 사용자 이벤트도 처리되지 않는 것을 확인할 수 있습니다.
+
+```
+let i = 0;
+
+let start = Date.now();
+
+function count() {
+  // CPU 소모가 많은 무거운 작업을 수행
+  for (let j = 0; j < 1e9; j++) {
+    i++;
+  }
+  alert("처리에 걸린 시간: " + (Date.now() - start) + "ms");
+}
+count();
+```
+
+저사양 머신이라면 브라우저에 'the script takes too long’라는 경고가 뜰 수도 있겠네요.  
+자, 이제 중첩 setTimeout 호출을 사용해 태스크를 쪼개서 문제를 해결해 봅시다.
+
+```
+let i = 0;
+
+let start = Date.now();
+
+function count() {
+  // 무거운 작업을 쪼갠 후 이를 수행 (*)
+  do {
+    i++;
+  } while (i % 1e6 != 0);
+  if (i == 1e9) {
+    alert("처리에 걸린 시간: " + (Date.now() - start) + "ms");
+  } else {
+    setTimeout(count); // 새로운 호출을 스케줄링 (**)
+  }
+}
+
+count();
+```
+이젠 숫자를 세는 도중에도 브라우저가 완전히 제 기능을 다 하는 것을 확인할 수 있습니다.
+
+멈춤 없이 브라우저가 동작할 수 있었던 것은 (*)로 표시한 do-while 반복에서 count 태스크 일부가 처리되고, 카운팅이 다 끝나지 않았다면 (**)로 표시한 줄에서 카운팅 태스크가 다시 스케줄링 되기 때문입니다.
+
+1. 첫 번째 부분 카운팅: i=1...1000000
+2. 두 번째 부분 카운팅: i=1000001..2000000
+3. 원하는 숫자를 다 셀 때까지 부분 카운팅이 이어짐
+
+엔진이 첫 번째 부분 카운팅을 진행하느라 바쁜 와중에 onclick 이벤트와 같은 새로운 태스크가 생기면 태스크는 큐에 들어갑니다. 이 태스크는 첫 번째 부분 카운팅이 끝나고 난 후, 두 번째 부분 카운팅이 시작되기 전에 실행됩니다. 이렇게 부분 카운팅 실행 중간 중간에 '환기’를 해 줘서 이벤트 루프가 돌아갈 수 있게 해주면, 사용자 이벤트에 반응하면서 무거운 태스크 처리가 가능해집니다.
+
+그런데 setTimeout을 사용해 태스크를 쪼갠 예시와 그 전의 예시를 비교하면 크지는 않지만 시간차가 어느 정도 있는 것을 볼 수 있습니다.
+
+코드를 다듬어 시간차를 줄여보도록 합시다.
+
+스케줄링해주는 코드를 함수 count() 앞부분으로 옮겨보았습니다.
+
+```
+let i = 0;
+let start = Date.now();
+
+function count() {
+  // 스케줄링 코드를 함수 앞부분으로 옮김
+  if (i < 1e9 - 1e6) {
+    setTimeout(count); // 새로운 호출을 스케줄링함
+  }
+  do {
+    i++;
+  } while (i % 1e6 != 0);
+  if (i == 1e9) {
+    alert("처리에 걸린 시간: " + (Date.now() - start) + "ms");
+  }
+}
+
+count();
+```
+
+직접 실행해 보면 아시겠지만 원하는 대로 시간이 단축되었네요.
+
+그렇다면 시간은 왜 단축된 것일까요?
+
+이유는 단순합니다. setTimeout과 setInterval을 이용한 호출 스케줄링 챕터에서 배운 바와 같이 중첩 setTimeout 호출이 많은 경우엔 브라우저 최소 대기 시간이 4밀리초가 되기 때문입니다. 이런 브라우저 스펙 때문에 코드상으론 대기 시간이 0이더라도 실제 대기시간은 4ms(혹은 그보다 조금 더 긴 시간)가 되는데, 숫자를 세기 전에 스케줄링하면 숫자를 세면서 대기 시간을 소모할 수 있어 실행이 더 빨라지게 되는 것입니다.
+
+이렇게 CPU를 많이 잡아먹는 태스크를 여러 개로 쪼개면, 전체 실행 시간을 많이 희생하지 않으면서도 사용자와의 상호작용에 막힘이 없어진다는 장점이 있습니다.
+
+출처 : https://ko.javascript.info/event-loop
