--- a/34.이벤트루프.md
+++ b/34.이벤트루프.md
@@ -131,4 +131,54 @@ count();
 
 이렇게 CPU를 많이 잡아먹는 태스크를 여러 개로 쪼개면, 전체 실행 시간을 많이 희생하지 않으면서도 사용자와의 상호작용에 막힘이 없어진다는 장점이 있습니다.
 
+### 유스 케이스 2: 프로그레스 바
+태스크를 여러 개로 쪼갤 때의 장점은 진행 상태를 나타내주는 프로그레스 바(progress bar)를 만들 때도 드러납니다.
+
+아시다시피 브라우저는 시간이 오래 걸리든 아니든 상관없이 현재 작업 중인 태스크가 끝나야 DOM 변경분을 화면에 렌더링해줍니다.
+
+이런 브라우저 동작 방식은 완성되지 않은 ‘중간’ 상태의 화면이 사용자에게 노출되는 걸 막아주기 때문에 유리합니다. 요소를 여러 개 만들고 이 요소들을 하나씩 화면에 추가한 다음 원하는 요소의 스타일을 변경시키는 일련의 과정이 담긴 함수가 있는데, 이 함수를 실행하는 동안에 변경사항 모두가 사용자에게 노출된다면 사용자는 혼란을 느꼈을 겁니다.
+
+관련 데모를 살펴봅시다. 함수가 끝날 때까지 사용자는 i가 변하는 것을 볼 수 없습니다. 화면엔 마지막 상태만 출력됩니다.
+
+```
+<div id="progress"></div>
+
+<script>
+  function count() {
+    for (let i = 0; i < 1e6; i++) {
+      i++;
+      progress.innerHTML = i;
+    }
+  }
+  count();
+</script>
+```
+
+그런데 개발을 하다 보면 프로그레스 바 같이 작업 진척 상태를 보여주는 인디케이터(indicator)를 만들어야 하는 경우가 생기곤 합니다.  
+이럴 때 setTimeout을 사용해 태스크를 여러 개로 쪼개면, 서브 태스크 중간마다 상태 변화를 볼 수 있습니다.  
+예시를 살펴봅시다.  
+
+```
+<div id="progress"></div>
+
+<script>
+  let i = 0;
+  function count() {
+    // 무거운 작업을 쪼갠 후 이를 수행
+    do {
+      i++;
+      progress.innerHTML = i;
+    } while (i % 1e3 != 0);
+    if (i < 1e7) {
+      setTimeout(count);
+    }
+  }
+  count();
+</script>
+```
+
+이제 프로그레스 바처럼 <div>에 i가 변화는 과정을 출력해 줄 수 있게 되었습니다.
+
+
+
 출처 : https://ko.javascript.info/event-loop
