--- a/34.이벤트루프.md
+++ b/34.이벤트루프.md
@@ -179,6 +179,25 @@ count();
 
 이제 프로그레스 바처럼 <div>에 i가 변화는 과정을 출력해 줄 수 있게 되었습니다.
 
+### 유스 케이스 3: 이벤트 처리가 끝난 이후에 작업하기
+
+이벤트 핸들러를 만들다 보면 이벤트 버블링이 끝나 모든 DOM 트리 레벨에서 이벤트가 핸들링 될 때까지 특정 액션을 연기시켜야 하는 경우가 생기곤 합니다. 이럴 때 연기시킬 액션 관련 코드를 지연 시간이 0인 setTimeout으로 감싸면 원하는 동작을 구현할 수 있습니다.
+
+앞서 커스텀 이벤트 디스패치 챕터에서 커스텀 이벤트 menu-open을 setTimeout 안에서 디스패칭하는 예시를 살펴본 바 있습니다. 이렇게 setTimeout을 사용하면 ‘click’ 이벤트가 완전히 핸들링 된 다음에 menu-open 이벤트를 디스패칭 할 수 있습니다.
+
+```
+menu.onclick = function() {
+  // ...
+
+  // 클릭한 메뉴 내 항목 정보가 담긴 커스텀 이벤트 생성
+  let customEvent = new CustomEvent("menu-open", {
+    bubbles: true
+  });
+
+  // 비동기로 커스텀 이벤트를 디스패칭
+  setTimeout(() => menu.dispatchEvent(customEvent));
+};
+```
 
 
 출처 : https://ko.javascript.info/event-loop
