--- a/34.이벤트루프.md
+++ b/34.이벤트루프.md
@@ -251,5 +251,15 @@ alert("code");
 </script>
 ```
 
+### 요약
+
+1. 매크로태스크 큐에서 가장 오래된 태스크를 꺼내 실행합니다(예: 스크립트를 실행).
+2. 모든 마이크로태스크를 실행합니다.
+ - 이 작업은 마이크로태스크 큐가 빌 때까지 이어지고
+    - 태스크는 오래된 순서대로 처리됩니다.
+3. 렌더링할 것이 있으면 처리합니다.
+4. 매크로태스크 큐가 비어있으면 새로운 매크로태스크가 나타날 때까지 기다립니다.
+5. 1번으로 돌아갑니다.
+
 
 출처 : https://ko.javascript.info/event-loop
