--- a/34.이벤트루프.md
+++ b/34.이벤트루프.md
@@ -276,4 +276,14 @@ alert("code");
 
 이런 처리 순서 덕분에 queueMicrotask를 사용해 함수를 비동기적으로 처리할 때 애플리케이션 상태의 일관성이 보장됩니다.
 
+
+웹 워커(Web worker)
+이벤트 루프를 막을 우려가 있는 무거운 연산은 웹 워커(Web Worker)를 사용해 처리할 수 있습니다.
+
+웹 워커를 사용하면 별도의 백그라운드 스레드에서 코드를 병렬적으로 실행할 수 있습니다.
+
+메인 스레드와 메시지를 교환할 수 있긴 하지만 웹 워커엔 메인 스레드와 연관 없는 고유한 변수들과 자체 이벤트 루프가 있습니다.
+
+웹 워커는 DOM에 접근할 수 없기 때문에 여러 CPU 코어를 동시에 사용해야 하는 연산에 주로 사용합니다.
+
 출처 : https://ko.javascript.info/event-loop
