--- a/35.실행 컨텍스트와 스택.md
+++ b/35.실행 컨텍스트와 스택.md
@@ -34,5 +34,66 @@ alert( pow(2, 3) );
 - Context: { x: 2, n: 3, 다섯 번째 줄 } pow(2, 3)
 x * pow (x, n - 1)을 계산하려면 새로운 인수가 들어가는 pow의 서브 호출(subcall), pow (2, 2)을 만들어야 합니다.
 
+### pow(2, 2)
+중첩 호출을 하기 위해, 자바스크립트는 실행 컨텍스트 스택 에 현재 실행 컨텍스트를 저장합니다.
+
+지금 보고 있는 예시에선 실행 컨텍스트 스택에 동일한 함수 pow를 호출하였는데, 이는 중요치 않습니다. 모든 함수에 대해 아래 프로세스가 똑같이 적용됩니다.
+
+1. 스택 최상단에 현재 컨텍스트가 '기록’됩니다.
+2. 서브 호출을 위한 새로운 컨텍스트가 만들어집니다.
+3. 서브 호출이 완료되면. 기존 컨텍스트를 스택에서 꺼내(pop) 실행을 이어나갑니다.
+
+다음은 서브 호출 pow (2, 2)이 시작될 때의 실행 컨텍스트 스택입니다.
+
+- Context: { x: 2, n: 2, 첫 번째 줄 } pow(2, 2)
+- Context: { x: 2, n: 3, 다섯 번째 줄 } pow(2, 3)
+
+굵은 테두리로 표시한 새 실행 컨텍스트는 상단에, 기존 컨텍스트는 하단에 있네요.
+
+이전 컨텍스트에 변수 정보, 코드가 일시 중단된 줄에 대한 정보가 저장되어있기 때문에 서브 호출이 끝났을 때 이전 컨텍스트가 문제없이 다시 시작됩니다.
+
+### pow(2, 1)
+동일한 과정이 다시 반복됩니다. 다섯 번째 줄에서 인수 x = 2, n = 1과 함께 새로운 서브 호출이 만들어집니다.
+
+새로운 실행 컨텍스트가 만들어지고, 이전 실행 컨텍스트는 스택 최상단에 올라갑니다(push).
+
+- Context: { x: 2, n: 1, 첫 번째 줄 } pow(2, 1)
+- Context: { x: 2, n: 2, 다섯 번째 줄 } pow(2, 2)
+- Context: { x: 2, n: 3, 다섯 번째 줄 } pow(2, 3)
+기존 컨텍스트 두 개가 밑에, pow (2, 1)에 상응하는 컨텍스트가 맨 위에 있는 것을 확인할 수 있습니다.
+
+### 실행 종료
+pow (2, 1)가 실행될 땐 상황이 달라집니다. 이전과는 달리 조건 n == 1을 만족시키므로 if문의 첫 번째 분기가 실행됩니다.
+
+```
+function pow(x, n) {
+  if (n == 1) {
+    return x;
+  } else {
+    return x * pow(x, n - 1);
+  }
+}
+```
+
+이젠 호출해야 할 중첩 호출이 없습니다. 따라서 함수는 종료되고 2가 반환됩니다.
+
+함수가 종료되었기 때문에 이에 상응하는 실행 컨텍스트는 쓸모가 없어졌습니다. 따라서 해당 실행 컨텍스트는 메모리에서 삭제됩니다. 스택 맨 위엔 이전의 실행 컨텍스가 위치하게 됩니다.
+
+- Context: { x: 2, n: 2, 다섯 번째 줄 } pow(2, 2)
+- Context: { x: 2, n: 3, 다섯 번째 줄 } pow(2, 3)
+
+pow (2, 2)의 실행이 다시 시작됩니다. 서브 호출 pow (2, 1)의 결과를 알고 있으므로, 쉽게 x * pow (x, n - 1)를 계산해 4를 반환합니다.
+
+그리고 다시 이전 컨텍스트가 스택 최상단에 위치하게 됩니다.
+
+- Context: { x: 2, n: 3, 다섯 번째 줄 } pow(2, 3)
+마지막 실행 컨텍스트까지 처리되면 pow (2, 3) = 8이라는 결과가 도출됩니다.
+
+지금 보신 예시의 재귀 깊이는 3 입니다.
+
+도식을 통해 살펴보았듯이, 재귀 깊이는 스택에 들어가는 실행 컨텍스트 수의 최댓값과 같습니다.
+
+실행 컨텍스트는 메모리를 차지하므로 재귀를 사용할 땐 메모리 요구사항에 유의해야 합니다. n을 늘리면 n이 줄어들 때마다 만들어지는 n개의 실행 컨텍스트가 저장될 메모리 공간이 필요하기 때문입니다.
+
 
 출처 : https://ko.javascript.info/recursion#ref-304
