--- a/15.async,await.md
+++ b/15.async,await.md
@@ -19,3 +19,23 @@ async function order(){
 
 Promise를 좀더 간결하고 세련되게 사용하는 느낌?을 받았다.
 보통 이런식으로 선언해서 많이 사용한다고합니다.
+
+### defer
+브라우저는 defer 속성이 있는 스크립트(이하 defer 스크립트 또는 지연 스크립트)를 '백그라운드’에서 다운로드 합니다. 따라서 지연 스크립트를 다운로드 하는 도중에도 HTML 파싱이 멈추지 않습니다. 그리고 defer 스크립트 실행은 페이지 구성이 끝날 때까지 지연 됩니다.
+
+위쪽 예시와 동일한 코드인데 스크립트에 defer만 붙여보겠습니다.
+
+```
+<p>...스크립트 앞 콘텐츠...</p>
+
+<script defer src="https://javascript.info/article/script-async-defer/long.js?speed=1"></script>
+
+<!-- 바로 볼 수 있네요! -->
+<p>...스크립트 뒤 콘텐츠...</p>
+
+```
+- 지연 스크립트는 페이지 생성을 절대 막지 않습니다.
+- 지연 스크립트는 DOM이 준비된 후에 실행되긴 하지만 DOMContentLoaded 이벤트 발생 전에 실행됩니다.
+
+
+출처 : https://ko.javascript.info/script-async-defer
