--- a/15.async,await.md
+++ b/15.async,await.md
@@ -37,5 +37,24 @@ Promise를 좀더 간결하고 세련되게 사용하는 느낌?을 받았다.
 - 지연 스크립트는 페이지 생성을 절대 막지 않습니다.
 - 지연 스크립트는 DOM이 준비된 후에 실행되긴 하지만 DOMContentLoaded 이벤트 발생 전에 실행됩니다.
 
+```
+<p>...스크립트 앞 콘텐츠...</p>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => alert("`defer` 스크립트가 실행된 후, DOM이 준비되었습니다!")); // (2)
+</script>
+
+<script defer src="https://javascript.info/article/script-async-defer/long.js?speed=1"></script>
+
+<p>...스크립트 뒤 콘텐츠...</p>
+```
+1. 페이지 콘텐츠는 바로 출력됩니다.
+2. DOMContentLoaded 이벤트는 지연 스크립트 실행을 기다립니다. 따라서 얼럿창은 DOM 트리가 완성되고 지연 스크립트가 실행된 후에 뜹니다.
+
+지연 스크립트는 일반 스크립트와 마찬가지로 HTML에 추가된 순(상대순, 요소순)으로 실행됩니다.
+
+따라서 길이가 긴 스크립트가 앞에, 길이가 짧은 스크립트가 뒤에 있어도 짧은 스크립트는 긴 스크립트가 실행될 때까지 기다립니다.
+
+
 
 출처 : https://ko.javascript.info/script-async-defer
