--- a/15.async,await.md
+++ b/15.async,await.md
@@ -55,6 +55,18 @@ Promise를 좀더 간결하고 세련되게 사용하는 느낌?을 받았다.
 
 따라서 길이가 긴 스크립트가 앞에, 길이가 짧은 스크립트가 뒤에 있어도 짧은 스크립트는 긴 스크립트가 실행될 때까지 기다립니다.
 
+```
+<script defer src="https://javascript.info/article/script-async-defer/long.js"></script>
+<script defer src="https://javascript.info/article/script-async-defer/small.js"></script>
+```
+작은 스크립트는 먼저 다운되지만, 실행은 나중에 됩니다.  
+
+브라우저는 성능을 위해 페이지에 어떤 스크립트들이 있는지 쭉 살펴본 후에야 스크립트를 병렬적으로 다운로드합니다. 위 예시에서도 스크립트 다운로드가 병렬적으로 진행되었습니다. 그런데 이 때 크기가 작은 small.js이 long.js보다 먼저 다운로드 될 수 있습니다.
+
+하지만 명세서에서 스크립트를 문서에 추가한 순서대로 실행하라고 정의했기 때문에 small.js는 long.js 다음에 실행됩니다.
+
+defer 속성은 외부 스크립트에만 유효합니다.  
+<script>에 src가 없으면 defer 속성은 무시됩니다.   
 
 
 출처 : https://ko.javascript.info/script-async-defer
